Fixed navigation bar styling, hamburger menu not showing as intented, added website responsiveness and fixed deck styling.

--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,6 +1,34 @@
-@media (max-width:762px){
+.cardStyle{
+  width: 300px;
+  height: 400px;
+  padding: 25px;
+  text-align: center;
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+}
+.deckImg{
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+}
+@media(max-width: 768px){
+  .cardStyle{
+    height: 320px;
+    max-width: 200px;
+    padding: 8px;
+  }
   .deckImg{
-    width: 200px;
-    height: 300px;
+    max-height: 300px;
+  }
+}
+@media(max-width: 620px){
+  .cardStyle{
+    height: 260px;
+    max-width: 160px;
+    padding: 6px;
+  }
+  .deckImg{
+    max-height: 240px;
   }
 }
